--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/2.1.disk-performance-calibration-of-mysql-mode.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/2.1.disk-performance-calibration-of-mysql-mode.md
@@ -10,7 +10,7 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
 
 ## 自动校准
 
-如果当前 OceanBase 集群为空负载，且磁盘有较多空闲空间，您可以通过 `JOB` 语句触发后台任务的方式自动对磁盘性能进行校准。该方式下，系统默认会对数据盘和日志盘各执行一次磁盘校准任务。如果数据盘与日志盘部署在一块物理磁盘上，则系统仅执行一次磁盘性能校准任务。
+如果当前 OceanBase 集群为空负载，且磁盘有较多空闲空间，您可以通过 `JOB` 语句触发后台任务的方式自动对磁盘性能进行校准。该方式下，系统默认会对数据盘执行一次磁盘校准任务。
 
 1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
@@ -20,7 +20,7 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库概述（MySQL 模式）](../../../../../3.develop/1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
+   有关更加详细的连接数据库的操作指引，请参见 [连接数据库概述](../../../../../3.develop/1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
 
 2. 根据业务使用场景，选择合适的命令，触发磁盘校准任务。
 
@@ -154,9 +154,9 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
 
    相关字段的说明信息如下：
 
-   * `STORAGE_NAME`：表示存储名称。`DATA` 表示数据盘； `REDO` 表示日志盘。
+   * `STORAGE_NAME`：表示存储名称。`DATA` 表示数据盘。
    * `MODE`：表示 I/O 模式为读或者写。
-   * `SIZE`：表示 I/O 的数据量，单位为字节。
+   * `SIZE`：表示单个 I/O 请求的数据量，单位为字节。
    * `IOPS`：表示每秒钟完成 I/O 请求的数量。
    * `MBPS`：表示磁盘带宽，单位为 MB/s。
    * `LATENCY`：表示磁盘响应时间，单位为 us。
@@ -164,7 +164,7 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
 
 ## 手动校准
 
-如果当前 OceanBase 集群有负载，您可以通过主动刷新磁盘校准信息的方式手动对磁盘性能进行校准。
+如果当前 OceanBase 集群中已有负载，您可以通过主动刷新磁盘校准信息的方式手动对磁盘性能进行校准。
 
 1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
@@ -174,130 +174,81 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
    obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库概述（Oracle 模式）](../../../../../3.develop/1.connect-to-oceanbase-database/2.connect-to-oceanbase-database-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
+   有关更加详细的连接数据库的操作指引，请参见 [连接数据库概述](../../../../../3.develop/1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
 
 2. 根据业务使用场景，选择合适的命令，主动刷新磁盘校准信息。
 
    * 对集群内的所有 OBServer 节点刷新一次磁盘性能信息
 
      ```sql
-     ALTER SYSTEM REFRESH IO CALIBRATION [STORAGE [=] 'storage_name'] [CALIBRATION_INFO [=] ("mode : size : latency : iops [, mode : size : latency : iops]") ];
-     ```
-
-     相关参数说明如下：
-
-     * `STORAGE`：指定 OceanBase 数据库存储盘的名称：
-
-       * `DATA`：数据盘。如果不指定 `STORAGE` 参数，默认为 `DATA`。
-       * `REDO`：日志盘。
-
-     * `CALIBRATION_INFO`：指定待刷新的磁盘校准信息。如果不指定，则默认从内部表刷新磁盘性能信息。
-
-       <main id="notice" type='explain'>
-       <h4>说明</h4>
-       <p>指定磁盘校准信息时，如果当前没有相关磁盘的压测数据，您可以使用 FIO 工具执行一次性能压测来获取当前磁盘的性能数据，有关 FIO 工具的详细介绍及使用，请参见 <a href="https://fio.readthedocs.io/en/latest/index.html">FIO 工具官网</a>。</p>
-       </main>
-
-       * `mode`：指定读还是写性能，支持 `r`、 `w`、`read` 或 `write`。
-       * `size`：指定数据量，默认为字节，即如果指定的值为纯数字，则其单位默认为字节。同时支持指定带单位的数值，包括 K、KB、M、MB、G、GB。
-       * `latency`：指定磁盘响应时间，默认单位为微秒，即如果指定的值为纯数字，则其单位默认为微秒。同时支持指定带单位的数值，包括 us、ms、s、min、h。
-       * `iops`：指定每秒钟完成 I/O 请求的数量，单位为 1。
-
-     对集群内所有 OBServer 节点的数据盘从内部表刷新一次磁盘性能信息的示例如下：
-
-     ```sql
-     ALTER SYSTEM REFRESH IO CALIBRATION;
+     ALTER SYSTEM REFRESH IO CALIBRATION [STORAGE [=] 'storage_name'] [CALIBRATION_INFO [=] ("mode : size : latency : iops" [, "mode : size : latency : iops"])];
      ```
 
    * 清除集群内所有 OBServer 节点的磁盘性能信息
 
      ```sql
-     ALTER SYSTEM REFRESH IO CALIBRATION [STORAGE [=] 'storage_name'] CALIBRATION_INFO = ();
-     ```
-
-     其中，`STORAGE` 用于指定 OceanBase 数据库存储盘的名称：
-
-     * `DATA`：数据盘。如果不指定 `STORAGE` 参数，默认为 `DATA`。
-     * `REDO`：日志盘。
-
-     清除集群内所有 OBServer 节点数据盘的磁盘性能信息的示例如下：
-
-     ```sql
-     ALTER SYSTEM REFRESH IO CALIBRATION CALIBRATION_INFO = ("");
+     ALTER SYSTEM REFRESH IO CALIBRATION [STORAGE [=] 'storage_name'] CALIBRATION_INFO = ("");
      ```
 
    * 对指定 Zone 内的所有 OBServer 节点刷新一次磁盘校准信息
 
-     语句如下：
-
      ```sql
-     ALTER SYSTEM REFRESH IO CALIBRATION [STORAGE [=] 'storage_name'] [CALIBRATION_INFO [=] ("mode : size : latency : iops [, mode : size : latency : iops]") ] ZONE [=] zone_name;
+     ALTER SYSTEM REFRESH IO CALIBRATION [STORAGE [=] 'storage_name'] [CALIBRATION_INFO [=] ("mode : size : latency : iops "[, "mode : size : latency : iops"])] ZONE [=] zone_name;
      ```
-
-     相关参数说明如下：
-
-     * `STORAGE`：指定 OceanBase 数据库存储盘的名称：
-
-       * `DATA`：数据盘。如果不指定 `STORAGE` 参数，默认为 `DATA`。
-       * `REDO`：日志盘。
-
-     * `CALIBRATION_INFO`：指定待刷新的磁盘校准信息。如果不指定，则默认从内部表刷新磁盘性能信息。
-
-       <main id="notice" type='explain'>
-       <h4>说明</h4>
-       <p>指定磁盘校准信息时，如果当前没有相关磁盘的压测数据，您可以使用 FIO 工具执行一次性能压测来获取当前磁盘的性能数据，有关 FIO 工具的详细介绍及使用，请参见 <a href="https://fio.readthedocs.io/en/latest/index.html">FIO 工具官网</a>。</p>
-       </main>
-
-       * `mode`：指定读还是写性能，支持 `r`、 `w`、`read` 或 `write`。
-       * `size`：指定数据量，默认为字节，即如果指定的值为纯数字，则其单位默认为字节。同时支持指定带单位的数值，包括 K、KB、M、MB、G、GB。
-       * `latency`：指定磁盘响应时间，默认单位为微秒，即如果指定的值为纯数字，则其单位默认为微秒。同时支持指定带单位的数值，包括 us、ms、s、min、h。
-       * `iops`：指定每秒钟完成 I/O 请求的数量，单位为 1。
-
-     * `zone_name`：指定待刷新磁盘校准信息的 Zone。当前仅支持指定一个 Zone。
-
-     对 `zone1` 内的所有 OBServer 节点的数据盘刷新一次磁盘校准信息的示例如下：
-
-     ```sql
-     ALTER SYSTEM REFRESH IO CALIBRATION STORAGE = 'DATA' CALIBRATION_INFO = ("read:4K:100us:200000","write:2M:5ms:1500") ZONE = zone1;
-     ```
-
-     本示例中，刷新的磁盘校准信息为：4KB 数据随机读的 RT 为 100 微秒，IOPS 为 200000，2MB 数据随机写的 RT 为 5 毫秒，IOPS 为 1500。
 
    * 对指定的 OBServer 节点刷新一次磁盘校准信息
 
-     语句如下：
-
      ```sql
-     ALTER SYSTEM REFRESH IO CALIBRATION [STORAGE [=] 'storage_name'] [CALIBRATION_INFO [=] ("mode : size : latency : iops [, mode : size : latency : iops]") ] SERVER [=] 'svr_ip:svr_port';
+     ALTER SYSTEM REFRESH IO CALIBRATION [STORAGE [=] 'storage_name'] [CALIBRATION_INFO [=] ("mode : size : latency : iops" [, "mode : size : latency : iops"])] SERVER [=] 'svr_ip:svr_port';
      ```
 
-     相关参数说明如下：
+   相关参数说明如下：
 
-     * `STORAGE`：指定 OceanBase 数据库存储盘的名称：
+   * `STORAGE`：指定 OceanBase 数据库存储盘的名称，当前仅支持 `DATA`，即数据盘。
 
-       * `DATA`：数据盘。如果不指定 `STORAGE` 参数，默认为 `DATA`。
-       * `REDO`：日志盘。
-
-     * `CALIBRATION_INFO`：指定待刷新的磁盘校准信息。如果不指定，则默认从内部表刷新磁盘性能信息。
+   * `CALIBRATION_INFO`：指定待刷新的磁盘校准信息。如果不指定，则默认从内部表刷新磁盘性能信息。
 
        <main id="notice" type='explain'>
        <h4>说明</h4>
        <p>指定磁盘校准信息时，如果当前没有相关磁盘的压测数据，您可以使用 FIO 工具执行一次性能压测来获取当前磁盘的性能数据，有关 FIO 工具的详细介绍及使用，请参见 <a href="https://fio.readthedocs.io/en/latest/index.html">FIO 工具官网</a>。</p>
        </main>
 
-       * `mode`：指定 I/O 模式，支持 `r`、 `w`、`read` 或 `write`。
-       * `size`：指定 I/O 数据量，默认为字节，即如果指定的值为纯数字，则其单位默认为字节。同时支持指定带单位的数值，包括 K、KB、M、MB、G、GB。
-       * `latency`：指定磁盘响应时间，默认单位为微秒，即如果指定的值为纯数字，则其单位默认为微秒。同时支持指定带单位的数值，包括 us、ms、s、min、h。
+       * `mode`：指定 I/O 模式，支持 `r`、 `w`、`read` 或 `write`。指定 I/O 模式时，读、写模式都至少需要指定一条记录，否则系统会报错。
+       * `size`：指定单个 I/O 请求的数据量，设置时必须指定为带单位的数值，例如：4K，单位支持 K、KB、M、MB、G、GB。
+       * `latency`：指定磁盘响应时间，默认单位为秒，即如果指定的值为纯数字，则其单位默认为秒。强烈建议设置时指定单位，不要使用默认单位，单位支持 us、ms、s、min、h。
        * `iops`：指定每秒钟完成 I/O 请求的数量，单位为 1。
 
-     * `svr_ip`：指定待刷新磁盘校准信息的 OBServer 节点的 IP。
-     * `svr_port`：指定待刷新磁盘校准信息的 OBServer 节点的 RPC 端口。
+   * `zone_name`：指定待刷新磁盘校准信息的 Zone。当前仅支持指定一个 Zone。
+   * `svr_ip`：指定待刷新磁盘校准信息的 OBServer 节点的 IP。
+   * `svr_port`：指定待刷新磁盘校准信息的 OBServer 节点的 RPC 端口。
+     
+   示例：
 
-     对指定 OBServer 节点的数据盘刷新一次磁盘校准信息的示例如下：
+   * 对集群内所有 OBServer 节点的数据盘从内部表刷新一次磁盘性能信息
 
-     ```sql
-     ALTER SYSTEM REFRESH IO CALIBRATION STORAGE = 'DATA' CALIBRATION_INFO = ("read:4K:100us:200000","write:2M:5ms:1500") SERVER = 'xx.xx.xx.1:2882';
-     ```
+      ```sql
+      ALTER SYSTEM REFRESH IO CALIBRATION;
+      ```
+
+   * 清除集群内所有 OBServer 节点数据盘的磁盘性能信息
+
+      ```sql
+      ALTER SYSTEM REFRESH IO CALIBRATION CALIBRATION_INFO = ("");
+      ```
+
+   * 对 `zone1` 内的所有 OBServer 节点的数据盘刷新一次磁盘校准信息
+
+      ```sql
+      ALTER SYSTEM REFRESH IO CALIBRATION STORAGE = 'DATA' CALIBRATION_INFO = ("read:4K:100us:200000","write:2M:5ms:1500") ZONE = zone1;
+      ```
+
+      本示例中，刷新的磁盘校准信息为：4KB 数据随机读的 RT 为 100 微秒，IOPS 为 200000，2MB 数据随机写的 RT 为 5 毫秒，IOPS 为 1500。
+
+   * 对指定 OBServer 节点的数据盘刷新一次磁盘校准信息
+
+      ```sql
+      ALTER SYSTEM REFRESH IO CALIBRATION STORAGE = 'DATA' CALIBRATION_INFO = ("read:4K:100us:200000","write:2M:5ms:1500") SERVER = 'xx.xx.xx.1:2882';
+      ```
 
 3. 查看磁盘 I/O 校准状态。
 
@@ -357,12 +308,12 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
 
    相关字段的说明信息如下：
 
-   * `STORAGE_NAME`：表示存储名称。`DATA` 表示数据盘； `REDO` 表示日志盘。
+   * `STORAGE_NAME`：表示存储名称。`DATA` 表示数据盘。
    * `MODE`：表示 I/O 模式为读或者写。
-   * `SIZE`：表示 I/O 的数据量，单位为字节。
+   * `SIZE`：表示单个 I/O 请求的数据量，单位为字节。
    * `IOPS`：表示每秒钟完成 I/O 请求的数量。
    * `MBPS`：表示磁盘带宽，单位为 MB/s。
-   * `LATENCY`：表示磁盘响应时间，单位为 us。
+   * `LATENCY`：表示磁盘响应时间，单位为微秒。
 
 ## 相关文档
 
