--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/2.1.disk-performance-calibration-of-mysql-mode.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/2.1.disk-performance-calibration-of-mysql-mode.md
@@ -206,14 +206,14 @@ OceanBase 数据库的磁盘性能校准功能用于对 OBServer 节点所在磁
 
    * `STORAGE`：指定 OceanBase 数据库存储盘的名称，当前仅支持 `DATA`，即数据盘。
 
-   * `CALIBRATION_INFO`：指定待刷新的磁盘校准信息。如果不指定，则默认从内部表刷新磁盘性能信息。
+   * `CALIBRATION_INFO`：指定待刷新的磁盘校准信息。如果不指定，则默认从内部表刷新磁盘性能信息。`CALIBRATION_INFO` 列表中，读、写模式都至少需要指定一条记录，否则系统会报错。
 
        <main id="notice" type='explain'>
        <h4>说明</h4>
        <p>指定磁盘校准信息时，如果当前没有相关磁盘的压测数据，您可以使用 FIO 工具执行一次性能压测来获取当前磁盘的性能数据，有关 FIO 工具的详细介绍及使用，请参见 <a href="https://fio.readthedocs.io/en/latest/index.html">FIO 工具官网</a>。</p>
        </main>
 
-       * `mode`：指定 I/O 模式，支持 `r`、 `w`、`read` 或 `write`。指定 I/O 模式时，读、写模式都至少需要指定一条记录，否则系统会报错。
+       * `mode`：指定 I/O 模式，支持 `r`、 `w`、`read` 或 `write`。
        * `size`：指定单个 I/O 请求的数据量，设置时必须指定为带单位的数值，例如：4K，单位支持 K、KB、M、MB、G、GB。
        * `latency`：指定磁盘响应时间，默认单位为秒，即如果指定的值为纯数字，则其单位默认为秒。强烈建议设置时指定单位，不要使用默认单位，单位支持 us、ms、s、min、h。
        * `iops`：指定每秒钟完成 I/O 请求的数量，单位为 1。
