--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/3.scale-in-and-scale-out-of-tenant-resources/2.by-modifying-unit_num.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/3.scale-in-and-scale-out-of-tenant-resources/2.by-modifying-unit_num.md
@@ -61,12 +61,12 @@
 
 ## 调大 UNIT_NUM
 
-假设当前集群中共包含 3 个可用区 `z1`、`z2`、`z3`，每个 Zone 内包含 2 个 OBServer 节点。在集群中创建一个普通租户 `tenant1`，其资源分配情况如下：
+假设当前集群中共包含 3 个可用区 `zone1`、`zone2`、`zone3`，每个 Zone 内包含 2 个 OBServer 节点。在集群中创建一个普通租户 `tenant1`，其资源分配情况如下：
 
 ```shell
 obclient> CREATE RESOURCE UNIT unit1 MAX_CPU 2, MIN_CPU 2, MEMORY_SIZE '5G', MAX_IOPS 20000, MIN_IOPS 20000, IOPS_WEIGHT=2, LOG_DISK_SIZE '15G';
 
-obclient> CREATE RESOURCE POOL pool1 UNIT 'unit1', UNIT_NUM 1, ZONE_LIST ('z1','z2','z3');
+obclient> CREATE RESOURCE POOL pool1 UNIT 'unit1', UNIT_NUM 1, ZONE_LIST ('zone1','zone2','zone3');
 
 obclient> CREATE TENANT MySQL resource_pool_list=('pool1');
 ```
@@ -154,12 +154,12 @@ obclient> CREATE TENANT MySQL resource_pool_list=('pool1');
 
 ## 调小 `UNIT_NUM`
 
-假设当前集群中共包含 3 个可用区 `z1`、`z2`、`z3`，每个 Zone 内包含 2 个 OBServer 节点。在集群中创建一个普通租户 `tenant1`，其资源分配情况如下：
+假设当前集群中共包含 3 个可用区 `zone1`、`zone2`、`zone3`，每个 Zone 内包含 2 个 OBServer 节点。在集群中创建一个普通租户 `tenant1`，其资源分配情况如下：
 
 ```shell
-obclient> CREATE RESOURCE UNIT unit1 MAX_CPU 3, MIN_CPU 3, MEMORY_SIZE '12G', MAX_IOPS 3000, MIN_IOPS 3000, IOPS_WEIGHT=3, LOG_DISK_SIZE '36G';
+obclient> CREATE RESOURCE UNIT unit1 MAX_CPU 2, MIN_CPU 2, MEMORY_SIZE '5G', MAX_IOPS 20000, MIN_IOPS 20000, IOPS_WEIGHT=2, LOG_DISK_SIZE '15G';
 
-obclient> CREATE RESOURCE POOL pool1 UNIT 'unit1', UNIT_NUM 2, ZONE_LIST ('z1','z2','z3');
+obclient> CREATE RESOURCE POOL pool1 UNIT 'unit1', UNIT_NUM 2, ZONE_LIST ('zone1','zone2','zone3');
 
 obclient> CREATE TENANT MySQL resource_pool_list=('pool1');
 
