--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/3.scale-in-and-scale-out-of-tenant-resources/2.by-modifying-unit_num.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/3.scale-in-and-scale-out-of-tenant-resources/2.by-modifying-unit_num.md
@@ -6,13 +6,13 @@
 
 在进行租户的扩容或缩容操作前，需要进行以下操作：
 
-* 开启租户内的数据均衡，实现分区在服务节点上的均衡。
+* 开启租户内的负载均衡，实现分区在服务节点上的均衡。
 
-  租户内的数据均衡由租户级配置项 `enable_rebalance` 控制。该配置项在系统租户下用于控制是否进行租户间的数据均衡；用户租户下用于控制是否进行租户内均衡。默认值为 `true`，设置后不需要重启 OBServer 节点，立即生效。
+  租户内的负载均衡由租户级配置项 `enable_rebalance` 控制。该配置项在系统租户下用于控制是否进行租户间的负载均衡；用户租户下用于控制是否进行租户内均衡。默认值为 `true`，设置后不需要重启 OBServer 节点，立即生效。
 
-  开启租户内的数据均衡的语句如下：
+  开启租户内的负载均衡的语句如下：
 
-  * 系统租户开启指定租户内的数据均衡
+  * 系统租户开启指定租户内的负载均衡
 
      ```sql
      ALTER SYSTEM SET enable_rebalance = true TENANT = 'tenant_name';
@@ -25,7 +25,7 @@
      ALTER SYSTEM SET enable_rebalance = true TENANT = 'oracle';
      ```
   
-  * 系统租户开启租户间的数据均衡，同时开启所有租户内的数据均衡
+  * 系统租户开启租户间的负载均衡，同时开启所有租户内的负载均衡
 
      ```sql
      ALTER SYSTEM SET enable_rebalance = true TENANT = ALL;
@@ -33,7 +33,7 @@
 
      该语句表示系统租户下和用户租户下配置项 `enable_rebalance` 的值均为 `true`。
 
-  * 用户租户开启本租户内的数据均衡
+  * 用户租户开启本租户内的负载均衡
 
     ```sql
     ALTER SYSTEM SET enable_rebalance = true;
