--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/3.adjust-unit-number.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/3.adjust-unit-number.md
@@ -199,7 +199,7 @@
    6 rows in set
    ```
 
-   根据查询结果可知，租户 `mq_t1` 的每个 Zone 均有 2 个 Unit。其中，`UNIT_ID` 为 `1007`、`1009`、`1011` 的 Unit 属于同一个 Unit Group；`UNIT_ID` 为 `1008`、`1010`、`1012` 的 Unit 属于另一个 Unit Group。
+   根据查询结果可知，租户 `mq_t1` 的每个 Zone 均有 2 个 Unit。其中，`UNIT_ID` 为 `1007`、`1009`、`1011` 的 Unit 属于同一个 Unit Group，且其 `UNIT_GROUP_ID` 为 `1001`；`UNIT_ID` 为 `1008`、`1010`、`1012` 的 Unit 属于另一个 Unit Group，且其 `UNIT_GROUP_ID` 为 `1002`。
 
 5. 把租户 `mq_t1` 的 `UNIT_NUM` 修改为 1。
 
@@ -214,7 +214,7 @@
    * 通过删除指定 `UNIT_GROUP` 的方式来调小 `UNIT_NUM` 的数量
 
      ```sql
-     ALTER RESOURCE TENANT mq_t1 UNIT_NUM = 1 DELETE UNIT_GROUP =(1007,1009,1011);
+     ALTER RESOURCE TENANT mq_t1 UNIT_NUM = 1 DELETE UNIT_GROUP =(1001);
      ```
 
      该语句执行后，对于每个 Zone 上 2 个 Unit 的场景，系统会将指定的 Unit Group 删除。
