--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/4.adjust-primary-zone.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/8.tenant-scale-in-and-out/4.adjust-primary-zone.md
@@ -4,11 +4,11 @@
 
 ## 前提条件
 
-调整 Primary Zone 前，需要开启租户内的数据均衡。租户内的数据均衡由租户级配置项 `enable_rebalance` 控制。该配置项在系统租户下用于控制是否进行租户间的数据均衡；用户租户下用于控制是否进行租户内均衡。默认值为 `true`，设置后不需要重启 OBServer 节点，立即生效。
+调整 Primary Zone 前，需要开启租户内的负载均衡。租户内的负载均衡由租户级配置项 `enable_rebalance` 控制。该配置项在系统租户下用于控制是否进行租户间的负载均衡；用户租户下用于控制是否进行租户内均衡。默认值为 `true`，设置后不需要重启 OBServer 节点，立即生效。
 
-开启租户内的数据均衡的语句如下：
+开启租户内的负载均衡的语句如下：
 
-* 系统租户开启指定租户内的数据均衡
+* 系统租户开启指定租户内的负载均衡
 
    ```sql
    ALTER SYSTEM SET enable_rebalance = true TENANT = 'tenant_name';
@@ -19,10 +19,10 @@
    示例：
 
    ```sql
-   ALTER SYSTEM SET enable_rebalance = true TENANT = 'oracle';
+   ALTER SYSTEM SET enable_rebalance = true TENANT = 'mq_t1';
    ```
   
-* 系统租户开启租户间的数据均衡，同时开启所有租户内的数据均衡
+* 系统租户开启租户间的负载均衡，同时开启所有租户内的负载均衡
 
    ```sql
    ALTER SYSTEM SET enable_rebalance = true TENANT = ALL;
@@ -30,13 +30,13 @@
 
    该语句表示系统租户下和用户租户下配置项 `enable_rebalance` 的值均为 `true`。
 
-* 用户租户开启本租户内的数据均衡
+* 用户租户开启本租户内的负载均衡
 
    ```sql
    ALTER SYSTEM SET enable_rebalance = true;
    ```
 
-更多配置项 enable_rebalance 的详细说明，请参见 [enable_rebalance](../../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/79.enable_rebalance.md)。
+更多配置项 `enable_rebalance` 的详细说明，请参见 [enable_rebalance](../../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/79.enable_rebalance.md)。
 
 ## 增加 Primary Zone
 
@@ -91,32 +91,13 @@
    6 rows in set
    ```
 
-5. 查询租户 `mq_t1` 的日志流信息，对应 `unit num` 为 2 和 `primary zone` 为 1，因此日志流个数为 2。
-
-   ```sql
-   SELECT * FROM oceanbase.CDB_OB_LS WHERE tenant_id = 1004;
-   ```
-
-   查询结果如下：
-
-   ```shell
-   +-----------+-------+--------+-------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+------+
-   | TENANT_ID | LS_ID | STATUS | PRIMARY_ZONE      | UNIT_GROUP_ID | LS_GROUP_ID | CREATE_SCN          | DROP_SCN | SYNC_SCN            | READABLE_SCN        | FLAG |
-   +-----------+-------+--------+-------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+------+
-   |      1004 |     1 | NORMAL | zone1;zone2;zone3 |             0 |           0 |                NULL |     NULL | 1688366970048273007 | 1688366970048273007 |      |
-   |      1004 |  1002 | NORMAL | zone1;zone2;zone3 |          1002 |        1002 | 1688210255076512987 |     NULL | 1688366970048273007 | 1688366970048273007 |      |
-   |      1004 |  1003 | NORMAL | zone1;zone2;zone3 |          1006 |        1003 | 1688365387917989511 |     NULL | 1688366969515784365 | 1688366969015163318 |      |
-   +-----------+-------+--------+-------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+------+
-   3 rows in set
-   ```
-
-6. 修改租户 `mq_t1` 的 `PRIMARY_ZONE` 属性，从 1 调整为 2 。
+5. 修改租户 `mq_t1` 的 `PRIMARY_ZONE` 属性，从 1 调整为 2 。
 
    ```sql
    ALTER TENANT mq_t1 PRIMARY_ZONE='zone1,zone2;zone3'; 
    ```
 
-7. 查询租户 `mq_t1` 的基本信息，确认 `PRIMARY_ZONE` 属性修改成功，由 `sa128_obv4_1` 变更为 `sa128_obv4_1,sa128_obv4_2`。
+6. 查询租户 `mq_t1` 的基本信息，确认 `PRIMARY_ZONE` 属性修改成功，第一优先级由 `zone1` 变更为 `zone1,zone2`。
 
    ```sql
    SELECT * FROM oceanbase.DBA_OB_TENANTS WHERE tenant_id = 1004;
@@ -133,7 +114,7 @@
    1 row in set
    ```
 
-8. 查询租户 `mq_t1` 的 Unit 信息，变更前后 `unit num` 保持不变。
+7. 查询租户 `mq_t1` 的 Unit 信息，变更前后 `unit num` 保持不变。
 
    ```sql
    SELECT * FROM oceanbase.DBA_OB_UNITS WHERE tenant_id = 1004;
@@ -155,28 +136,7 @@
    6 rows in set
    ```
 
-9. 查询租户 `mq_t1` 的日志流信息，变更前为 2，变更后为 4。
-
-   ```shell
-   SELECT * FROM oceanbase.CDB_OB_LS WHERE tenant_id = 1004;
-   ```
-
-   查询结果如下：
-
-   ```shell
-   +-----------+-------+--------+-------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+------+
-   | TENANT_ID | LS_ID | STATUS | PRIMARY_ZONE      | UNIT_GROUP_ID | LS_GROUP_ID | CREATE_SCN          | DROP_SCN | SYNC_SCN            | READABLE_SCN        | FLAG |
-   +-----------+-------+--------+-------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+------+
-   |      1004 |     1 | NORMAL | zone1;zone2;zone3 |             0 |           0 |                NULL |     NULL | 1688367340565073477 | 1688367340565073477 |      |
-   |      1004 |  1002 | NORMAL | zone1;zone2;zone3 |          1002 |        1002 | 1688210255076512987 |     NULL | 1688367340565073477 | 1688367340565073477 |      |
-   |      1004 |  1003 | NORMAL | zone1;zone2;zone3 |          1006 |        1003 | 1688365387917989511 |     NULL | 1688367340482412515 | 1688367340482412514 |      |
-   |      1004 |  1006 | NORMAL | zone2;zone1;zone3 |          1002 |        1002 | 1688367168643316621 |     NULL | 1688367340653625625 | 1688367340653625624 |      |
-   |      1004 |  1007 | NORMAL | zone2;zone1;zone3 |          1006 |        1003 | 1688367168646769301 |     NULL | 1688367340719712839 | 1688367340719712838 |      |
-   +-----------+-------+--------+-------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+------+
-   5 rows in set
-   ```
-
-通过上述示例，将租户 `mq_t1` 的 Primary Zone 的 Zone 个数从 1 变更为 2。变更前租户在每个 Zone 的 Unit 个数为 2，对应的日志流个数为 2；变更后租户在每个 Zone 的 Unit 个数保持不变，但 Primary Zone 个数从 1 变更为 2，从而对应的日志流个数变更为 4。变更后租户的服务节点从 2 扩容为 4，从而实现了租户扩容。
+通过上述示例，将租户 `mq_t1` 的 Primary Zone 的 Zone 个数从 1 变更为 2。变更前租户在每个 Zone 的 Unit 个数为 2；变更后租户在每个 Zone 的 Unit 个数保持不变，但 Primary Zone 个数从 1 变更为 2，从而实现了租户扩容。
 
 ## 减少 Primary Zone
 
@@ -231,34 +191,13 @@
    6 rows in set
    ```
 
-5. 查询租户 `mq_t1` 的日志流信息，对应 `unit num` 为 2 和 `primary zone` 为 2，因此日志流个数为 4。
-
-   ```sql
-   SELECT * FROM oceanbase.CDB_OB_LS WHERE tenant_id = 1004;
-   ```
-
-   查询结果如下：
-
-   ```shell
-   +-----------+-------+--------+-------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+------+
-   | TENANT_ID | LS_ID | STATUS | PRIMARY_ZONE      | UNIT_GROUP_ID | LS_GROUP_ID | CREATE_SCN          | DROP_SCN | SYNC_SCN            | READABLE_SCN        | FLAG |
-   +-----------+-------+--------+-------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+------+
-   |      1004 |     1 | NORMAL | zone1;zone2;zone3 |             0 |           0 |                NULL |     NULL | 1688367340565073477 | 1688367340565073477 |      |
-   |      1004 |  1002 | NORMAL | zone1;zone2;zone3 |          1002 |        1002 | 1688210255076512987 |     NULL | 1688367340565073477 | 1688367340565073477 |      |
-   |      1004 |  1003 | NORMAL | zone1;zone2;zone3 |          1006 |        1003 | 1688365387917989511 |     NULL | 1688367340482412515 | 1688367340482412514 |      |
-   |      1004 |  1006 | NORMAL | zone2;zone1;zone3 |          1002 |        1002 | 1688367168643316621 |     NULL | 1688367340653625625 | 1688367340653625624 |      |
-   |      1004 |  1007 | NORMAL | zone2;zone1;zone3 |          1006 |        1003 | 1688367168646769301 |     NULL | 1688367340719712839 | 1688367340719712838 |      |
-   +-----------+-------+--------+-------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+------+
-   5 rows in set
-   ```
-
-6. 修改租户 `mq_t1` 的 `PRIMARY_ZONE` 属性，第一优先级 Zone 的个数从 2 调整为 1。
+5. 修改租户 `mq_t1` 的 `PRIMARY_ZONE` 属性，第一优先级 Zone 的个数从 2 调整为 1。
 
    ```sql
    ALTER TENANT mq_t1 PRIMARY_ZONE='zone1;zone2,zone3'; 
    ```
 
-7. 查询租户 `mq_t1` 的基本信息，确认 `PRIMARY_ZONE` 属性修改成功，由 `zone1,zone2` 变更为 `zone1`。
+6. 查询租户 `mq_t1` 的基本信息，确认 `PRIMARY_ZONE` 属性修改成功，由 `zone1,zone2` 变更为 `zone1`。
 
    ```sql
    SELECT * FROM oceanbase.DBA_OB_TENANTS WHERE tenant_id = 1004;
@@ -275,7 +214,7 @@
    1 row in set
    ```
 
-8. 再次查询租户 `mq_t1` 的 Unit 信息，变更前后 `unit num` 保持不变。
+7. 再次查询租户 `mq_t1` 的 Unit 信息，变更前后 `unit num` 保持不变。
 
    ```sql
    SELECT * FROM oceanbase.DBA_OB_UNITS WHERE tenant_id = 1004;
@@ -297,23 +236,4 @@
    6 rows in set
    ```
 
-9. 再次查询租户 `mq_t1` 的日志流信息，变更前为 4，变更后为 2。
-
-   ```sql
-   SELECT * FROM oceanbase.CDB_OB_LS WHERE tenant_id = 1004;
-   ```
-
-   查询结果如下：
-
-   ```shell
-   +-----------+-------+--------+-------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+------+
-   | TENANT_ID | LS_ID | STATUS | PRIMARY_ZONE      | UNIT_GROUP_ID | LS_GROUP_ID | CREATE_SCN          | DROP_SCN | SYNC_SCN            | READABLE_SCN        | FLAG |
-   +-----------+-------+--------+-------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+------+
-   |      1004 |     1 | NORMAL | zone1;zone2,zone3 |             0 |           0 |                NULL |     NULL | 1688367882912807852 | 1688367882912807852 |      |
-   |      1004 |  1002 | NORMAL | zone1;zone2,zone3 |          1002 |        1002 | 1688210255076512987 |     NULL | 1688367882912807852 | 1688367882912807852 |      |
-   |      1004 |  1003 | NORMAL | zone1;zone2,zone3 |          1006 |        1003 | 1688365387917989511 |     NULL | 1688367883172764943 | 1688367882672070884 |      |
-   +-----------+-------+--------+-------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+------+
-   3 rows in set
-   ```
-
-通过上述示例，将租户 `mq_t1` 的 Primary Zone 的 Zone 个数从 2 变更为 1。变更前租户在每个 Zone 的 Unit 个数为 2，对应的日志流个数为 4；变更后租户在每个 Zone 的 Unit 个数保持不变，但 Primary Zone 个数从 2 变更为 1，从而对应的日志流个数变更为 2。变更后租户的服务节点从 4 缩容为 2，从而实现了租户缩容。
+通过上述示例，将租户 `mq_t1` 的 Primary Zone 的 Zone 个数从 2 变更为 1。变更前租户在每个 Zone 的 Unit 个数为 2；变更后租户在每个 Zone 的 Unit 个数保持不变，但 Primary Zone 个数从 2 变更为 1，从而实现了租户缩容。
