--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/3.scale-in-and-scale-out-of-tenant-resources/2.by-modifying-unit_num.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.scale-out-and-scale-in/3.scale-in-and-scale-out-of-tenant-resources/2.by-modifying-unit_num.md
@@ -22,7 +22,7 @@
 
      示例：
      ```sql
-     ALTER SYSTEM SET enable_rebalance = true TENANT = 'oracle';
+     ALTER SYSTEM SET enable_rebalance = true TENANT = 'tenant1';
      ```
   
   * 系统租户开启租户间的负载均衡，同时开启所有租户内的负载均衡
@@ -151,7 +151,6 @@ obclient> CREATE TENANT MySQL resource_pool_list=('pool1');
    6 rows in set
    ```
 
-
 ## 调小 `UNIT_NUM`
 
 假设当前集群中共包含 3 个可用区 `zone1`、`zone2`、`zone3`，每个 Zone 内包含 2 个 OBServer 节点。在集群中创建一个普通租户 `tenant1`，其资源分配情况如下：
@@ -214,7 +213,7 @@ obclient> CREATE TENANT MySQL resource_pool_list=('pool1');
       6 rows in set
       ```
 
-      根据查询结果可知，`UNIT_ID` 为 `1001`、`1003`、`1005` 的 Unit 属于同一个 UNIT GROUP；`UNIT_ID` 为 `1002`、`1004`、`1006` 的 Unit 属于同一个 UNIT GROUP。
+      根据查询结果可知，`UNIT_ID` 为 `1001`、`1003`、`1005` 的 Unit 属于同一个 UNIT GROUP，且其 `UNIT_GROUP_ID` 为 `1003`；`UNIT_ID` 为 `1002`、`1004`、`1006` 的 Unit 属于同一个 UNIT GROUP，且其 `UNIT_GROUP_ID` 为 `1004`。
 
 4. 执行以下语句，调小 `UNIT_NUM` 的数量。
 
@@ -245,12 +244,12 @@ obclient> CREATE TENANT MySQL resource_pool_list=('pool1');
 
      * `tenant_name`：待调整 `UNIT_NUM` 数量的租户名。
      * `count`：调整后该租户的 `UNIT_NUM` 的个数。
-     * `id_list`：待删除的 `UNIT_ID`，多个 `UNIT_ID` 之间通过英文逗号（,）分隔。`UNIT_ID` 可以通过查询 `DBA_OB_UNITS` 视图获取。
+     * `id_list`：待删除的 `UNIT_GROUP_ID`，多个 `UNIT_GROUP_ID` 之间通过英文逗号（,）分隔。`UNIT_GROUP_ID` 可以通过查询 `DBA_OB_UNITS` 视图获取。
 
      示例如下：
 
      ```sql
-     ALTER RESOURCE TENANT tenant1 UNIT_NUM = 1 DELETE UNIT_GROUP =(1001,1003,1005);
+     ALTER RESOURCE TENANT tenant1 UNIT_NUM = 1 DELETE UNIT_GROUP =(1003);
      ```
 
      该语句执行后，对于每个 Zone 上 2 个 Unit 的场景，系统会将指定的 Unit Group 删除。
