--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/12.view-cluster-parameters.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/12.view-cluster-parameters.md
@@ -12,7 +12,7 @@
 
   与 `SHOW` 语句不同，通过 `GV$OB_PARAMETERS` 视图可以查看集群中的所有配置项（含隐藏配置项，即 `_xx_xx` 格式的配置项）及其所有属性描述。
 
-有关配置项的更多说明，请参见 [系统配置项概述](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview.md)。
+有关配置项的更多说明，请参见 [系统配置项概述](../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/1.system-configuration-items-overview.md)。
 
 ## 通过 SHOW 语句查看集群配置项
 
@@ -120,7 +120,7 @@
    3 rows in set
    ```
   
-  有关 `GV$OB_PARAMETERS` 视图的更多信息，请参见 [GV$OB_PARAMETERS（MySQL 模式）](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/6.gv-ob_parameters-of-mysql-mode.md) 和 [GV$OB_PARAMETERS（Oracle 模式）](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/6.gv-ob_parameters-of-oracle-mode.md)。
+  有关 `GV$OB_PARAMETERS` 视图的更多信息，请参见 [GV$OB_PARAMETERS（MySQL 模式）](../../../7.reference/7.system-views/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/6.gv-ob_parameters-of-oracle-mode.md)。
 
 ## 相关文档
 
@@ -132,4 +132,4 @@
 
 * [租户系统变量](../../2.tenant-management/5.system-variable-of-tenant.md)
 
-有关每个配置项的详细介绍，请参见 [系统配置项](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview.md)。
+有关每个配置项的详细介绍，请参见 [系统配置项](../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/1.system-configuration-items-overview.md)。
