--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/13.modify-cluster-parameters.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/13.modify-cluster-parameters.md
@@ -7,7 +7,7 @@
    <p>系统租户（即 <code>sys</code> 租户），可以查看和设置集群级配置项，用户租户只能查看集群级配置项，无法设置集群级配置项。</p>
  </main>
 
-有关配置项的更多说明，请参见 [系统配置项概述](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview.md)。
+有关配置项的更多说明，请参见 [系统配置项概述](../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/1.system-configuration-items-overview.md)。
 
 ## 操作步骤
 
@@ -115,4 +115,4 @@
 
 * [租户系统变量](../../2.tenant-management/5.system-variable-of-tenant.md)
 
-有关每个配置项的详细介绍，请参见 [系统配置项](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview.md)。
+有关每个配置项的详细介绍，请参见 [系统配置项](../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/1.system-configuration-items-overview.md)。
