--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md
@@ -101,7 +101,7 @@
 
    根据查询结果可知，`ARBITRATION_SERVICE_STATUS` 列为 `DISABLED`，表示该租户已关闭仲裁服务。
 
-   有关 `DBA_OB_TENANTS` 视图的更多介绍，请参见 [DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/193.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
+   有关 `DBA_OB_TENANTS` 视图的更多介绍，请参见 [DBA_OB_TENANTS](../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/193.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
 
 4. 执行以下命令，为租户开启仲裁服务。
 
@@ -185,7 +185,7 @@
 
    如果查询结果为空，则表示所有日志流中都有仲裁成员。
 
-   有关 `GV$OB_LOG_STAT` 视图字段的详细介绍，请参见 [GV$OB_LOG_STAT](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/120.gv-ob_log_stat-mysql.md)。
+   有关 `GV$OB_LOG_STAT` 视图字段的详细介绍，请参见 [GV$OB_LOG_STAT](../../../7.reference/7.system-views/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/120.gv-ob_log_stat-mysql.md)。
 
    如果查询结果为空，则表示所有日志流都有仲裁成员，仲裁服务可用；如果查询结果不为空，此时 Root Service 会在后台为这些日志流补仲裁成员，您可以通过 `CDB_OB_LS_ARB_REPLICA_TASKS` 视图进一步确认是否有正在执行补仲裁成员的任务，如果确认补仲裁成员的任务存在且正在执行，需要等待任务执行完成。
 
