--- a/zh-CN/1.learn-more-about-oceanbase/4.compatibility-with-oracle/1.overview-of-compatibility-with-oracle.md
+++ b/zh-CN/1.learn-more-about-oceanbase/4.compatibility-with-oracle/1.overview-of-compatibility-with-oracle.md
@@ -109,7 +109,7 @@ OceanBase 数据库支持 Oracle 数据库中绝大部分的 SQL 语法。
 
 OceanBase 数据库支持使用 Hint。Oracle 数据库中有 72 个 Hint，目前 OceanBase 数据库兼容 24 个。另外，OceanBase 数据库特有的 Hint 有 23 个。
 
-关于 Hint 的详细说明，请参见 [Hint](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/6.annotation-of-oracle-mode/4.hint-of-oracle-mode/1.hint-overview-of-oracle-mode.md)
+关于 Hint 的详细说明，请参见 [Hint](../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/6.annotation-of-oracle-mode/4.hint-of-oracle-mode/1.hint-overview-of-oracle-mode.md)。
 
 ## 过程性语言
 
@@ -145,7 +145,7 @@ OceanBase 数据库暂不支持如下 PL 功能：
 
 * 条件编译
 
-更多 PL 功能的详细信息请参见 [PL 参考](../../7.reference/4.development-reference/3.pl-reference/1.what-is-pl/1.pl-introduction.md)。
+更多 PL 功能的详细信息请参见 [PL 参考](../../7.reference/5.sql-reference/3.pl-reference/1.what-is-pl/1.pl-introduction.md)。
 
 ## 系统视图
 
@@ -157,7 +157,7 @@ OceanBase 数据库兼容了部分 Oracle 数据库的系统视图，其中：
 
 关于兼容的详细视图列表请参见 [系统视图](4.system-view.md)。
 
-更多系统视图的字段说明信息请参考《参考指南（Oracle 模式）》文档中 [系统视图](../../7.reference/5.system-reference/5.system-view-of-oracle-mode/1.overview-of-oracle-mode.md) 章节。
+更多系统视图的字段说明信息请参考《参考指南（Oracle 模式）》文档中 [系统视图](../../7.reference/7.system-views/5.system-view-of-oracle-mode/1.overview-of-oracle-mode.md) 章节。
 
 ## 字符集和字符序
 
@@ -199,7 +199,7 @@ OceanBase 数据库兼容了部分 Oracle 数据库的系统视图，其中：
 
 * 删除基表：支持删除表，并级联约束。
 
-关于创建、修改、删除表的详细语法，请参见 [CREATE TABLE](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md)、[ALTER TABLE](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md)、[DROP TABLE](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/39.drop-table-of-oracle-mode.md)。
+关于创建、修改、删除表的详细语法，请参见 [CREATE TABLE](../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md)、[ALTER TABLE](../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md)、[DROP TABLE](../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/39.drop-table-of-oracle-mode.md)。
 
 **约束**
 
@@ -229,7 +229,7 @@ OceanBase 数据库兼容了部分 Oracle 数据库的系统视图，其中：
 
 * 模板化二级分区表暂不支持添加二级分区、删除二级分区
 
-更多分区的说明及使用请参见《管理员指南》文档中的 [分区概述](../../7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/1.partition-overview-of-oracle-mode.md) 章节。
+更多分区的说明及使用请参见《管理员指南》文档中的 [分区概述](../../7.reference/3.database-object-management/2.manage-object-of-oracle-mode/2.manage-partitions-of-oracle-mode/1.partition-overview-of-oracle-mode.md) 章节。
 
 **索引管理**
 
@@ -381,7 +381,7 @@ OceanBase 数据库的 SQL 引擎暂不支持以下功能：
 
 * 近似查询处理
 
-更多 SQL 引擎的详细信息请参见 [SQL 调优指南](../../7.reference/3.performance-tuning-guide/5.sql-optimization/1.sql-request-execution-process.md)。
+更多 SQL 引擎的详细信息请参见 [SQL 调优指南](../../7.reference/10.performance-tuning-guide/5.sql-optimization/1.sql-request-execution-process.md)。
 
 ## 暂不支持的功能
 
