--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/10.modify-a-zone.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/10.modify-a-zone.md
@@ -57,7 +57,7 @@
    4 rows in set
    ```
 
-   有关 `oceanbase.DBA_OB_ZONES` 视图的更多详细信息，请参见 [oceanbase.DBA_OB_ZONES](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/63.oceanbase-dba_ob_zones-of-mysql-mode.md)。
+   有关 `oceanbase.DBA_OB_ZONES` 视图的更多详细信息，请参见 [oceanbase.DBA_OB_ZONES](../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/63.oceanbase-dba_ob_zones-of-mysql-mode.md)。
 
 ## 相关文档
 
