--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/7.replace-a-node.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/7.replace-a-node.md
@@ -20,7 +20,7 @@
 
 3. 将旧节点上的 Unit 迁移到新节点。
 
-   1. 查询 `oceanbase.DBA_OB_SERVERS` 视图获取待替换节点的相关信息。
+   1. 查询 `DBA_OB_SERVERS` 视图获取待替换节点的相关信息。
 
       查询示例如下：
 
@@ -39,7 +39,7 @@
       6 rows in set
       ```
 
-      有关 `oceanbase.DBA_OB_SERVERS` 视图的更多详细信息，请参见 [oceanbase.DBA_OB_SERVERS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/50.oceanbase-dba_ob_servers-of-mysql-mode.md)。
+      有关 `DBA_OB_SERVERS` 视图的更多详细信息，请参见 [DBA_OB_SERVERS](../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/50.oceanbase-dba_ob_servers-of-mysql-mode.md)。
 
    2. 根据节点 IP 查询待替换的节点的 Unit 列表。
 
