--- a/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/8.add-a-zone.md
+++ b/zh-CN/6.manage/1.cluster-management/3.common-cluster-operations/8.add-a-zone.md
@@ -55,7 +55,7 @@
 
    查询结果中有新添加的 Zone，则表示添加 Zone 成功，新添加成功的 Zone 的状态为 `INACTIVE`。
 
-   有关 `oceanbase.DBA_OB_ZONES` 视图的更多详细信息，请参见 [oceanbase.DBA_OB_ZONES](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/63.oceanbase-dba_ob_zones-of-mysql-mode.md)。
+   有关 `DBA_OB_ZONES` 视图的更多详细信息，请参见 [DBA_OB_ZONES](../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/63.oceanbase-dba_ob_zones-of-mysql-mode.md)。
 
 4. 添加 Zone 后，如果需要使用该 Zone，还需要启动 Zone，使 Zone 的状态变为 `ACTIVE`。
 
