--- a/zh-CN/6.manage/4.high-availability/2.multi-replica-disaster-recovery/3.database-high-availability.md
+++ b/zh-CN/6.manage/4.high-availability/2.multi-replica-disaster-recovery/3.database-high-availability.md
@@ -10,13 +10,13 @@ OBServer 心跳状态相关的配置项如下：
 
 * `lease_time`
   
-  集群级配置项 `lease_time` 用于设置心跳租约时长。该配置项的默认值为 10s。有关该配置项的详细信息，参见 [lease_time](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/118.lease_time.md)。
+  集群级配置项 `lease_time` 用于设置心跳租约时长。该配置项的默认值为 10s。有关该配置项的详细信息，参见 [lease_time](../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/3.cluster-level-configuration-items/118.lease_time.md)。
 
   当 Root Service 累计超过 `lease_time` 时间没有收到过某 OBServer 的任意心跳数据包时，Root Service 认为该 observer 进程短暂断线，Root Service 会标记该 OBServer 服务器的心跳状态为 `lease_expired`。
 
 * `server_permanent_offline_time`
   
-  集群级配置项 `server_permanent_offline_time` 用于设置节点心跳中断的时间阈值，即节点心跳中断多久后认为其被永久下线，永久下线的节点上的数据副本需要被自动补足。该配置项的默认值为 3600s。有关该配置项的更多详细信息，参见 [server_permanent_offline_time](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/190.server_permanent_offline_time.md)。
+  集群级配置项 `server_permanent_offline_time` 用于设置节点心跳中断的时间阈值，即节点心跳中断多久后认为其被永久下线，永久下线的节点上的数据副本需要被自动补足。该配置项的默认值为 3600s。有关该配置项的更多详细信息，参见 [server_permanent_offline_time](../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/3.cluster-level-configuration-items/190.server_permanent_offline_time.md)。
 
   当 Root Service 累计超过 `server_permanent_offline_time` 时间没有收到过某 OBServer 的任意心跳数据包时，Root Service 认为该 observer 进程断线，Root Service 会标记该 OBServer 的心跳状态为 `permanent_offline`。
 
@@ -100,7 +100,7 @@ ODP 会感知 OBServer 的异常状态，例如 stopped（`ACTIVE` 状态且 `st
    24 rows in set
    ```
 
-   有关 `CDB_OB_LS_LOCATIONS` 视图的更多信息，参见 [CDB_OB_LS_LOCATIONS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/93.oceanbase-cdb_ob_ls_locations-of-mysql-mode.md)。
+   有关 `CDB_OB_LS_LOCATIONS` 视图的更多信息，参见 [CDB_OB_LS_LOCATIONS](../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/93.oceanbase-cdb_ob_ls_locations-of-mysql-mode.md)。
 
 3. 根据实际情况，选择合适的命令切主。
 
