--- a/zh-CN/6.manage/4.high-availability/5.recyclebin-management/5.purge-the-recyclebin.md
+++ b/zh-CN/6.manage/4.high-availability/5.recyclebin-management/5.purge-the-recyclebin.md
@@ -138,7 +138,7 @@ OceanBase 数据库当前支持通过集群级配置项 `recyclebin_object_expir
 
 * 值为非 `0s` 时，表示 Purge 一段时间前进入回收站的对象。
 
-有关集群级配置项 `recyclebin_object_expire_time` 的更多信息，请参见 [recyclebin_object_expire_time](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/166.recyclebin_object_expire_time.md)。
+有关集群级配置项 `recyclebin_object_expire_time` 的更多信息，请参见 [recyclebin_object_expire_time](../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/3.cluster-level-configuration-items/166.recyclebin_object_expire_time.md)。
 
 1. 使用 `root` 用户登录数据库的 `sys` 租户。
 
