--- a/zh-CN/6.manage/4.high-availability/6.manage-flashback-query.md
+++ b/zh-CN/6.manage/4.high-availability/6.manage-flashback-query.md
@@ -2,7 +2,7 @@
 
 OceanBase 数据库提供了记录级别的闪回查询（Flashback Query）功能，该功能允许用户获取某个历史版本的数据。其中，Oracle 模式支持 `AS OF SCN`和 `AS OF TIMESTAMP` 两种语法来查询；MySQL 模式支持通过 `AS OF SNAPSHOT` 语法来查询。
 
-OceanBase 数据库当前支持用户通过设置租户级配置项 `undo_retention` 的方式来进行闪回查询。当用户设置 `undo_retention` 后，即可使用闪回查询功能查询当前时间 `T` 到 `T - undo_retention` 时间范围内的任意多版本数据。租户级配置项 `undo_retention` 的默认值为 1800，单位为秒，有关租户级配置项 `undo_retention` 的更多信息，请参见 [undo_retention](../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/49.undo_retention.md)。
+OceanBase 数据库当前支持用户通过设置租户级配置项 `undo_retention` 的方式来进行闪回查询。当用户设置 `undo_retention` 后，即可使用闪回查询功能查询当前时间 `T` 到 `T - undo_retention` 时间范围内的任意多版本数据。租户级配置项 `undo_retention` 的默认值为 1800，单位为秒，有关租户级配置项 `undo_retention` 的更多信息，请参见 [undo_retention](../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/4.tenant-level-configuration-items/49.undo_retention.md)。
   
 ## 注意事项
 
@@ -45,7 +45,7 @@ OceanBase 数据库当前支持用户通过设置租户级配置项 `undo_retent
    obclient [(none)]> ALTER SYSTEM SET undo_retention=900;
    ```
 
-   有关租户级配置项 `undo_retention` 的更多信息，请参见 [undo_retention](../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/49.undo_retention.md)。
+   有关租户级配置项 `undo_retention` 的更多信息，请参见 [undo_retention](../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/4.tenant-level-configuration-items/49.undo_retention.md)。
 
 ## MySQL 模式下的闪回查询
 
