--- a/zh-CN/7.reference/12.database-proxy/17.set-the-maximum-connections.md
+++ b/zh-CN/7.reference/12.database-proxy/17.set-the-maximum-connections.md
@@ -57,7 +57,7 @@
    1 row in set
    ```
 
-   有关视图 `GV$OB_PARAMETERS`  的更多介绍，请参见 [GV$OB_PARAMETERS](../../../5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/6.gv-ob_parameters-of-mysql-mode.md)。
+   有关视图 `GV$OB_PARAMETERS`  的更多介绍，请参见 [GV$OB_PARAMETERS](../7.system-views/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/6.gv-ob_parameters-of-mysql-mode.md)。
 
 3. 设置租户的最大连接数。
 
@@ -81,5 +81,5 @@
 
 关于配置项和变量的更多介绍，请参见如下信息：
 
-* [设置参数](../2.configuration-management/2.set-parameters.md)
-* [设置变量](../2.configuration-management/3.set-variables.md)
+* [设置参数](../2.system-management/2.configuration-management/2.set-parameters.md)
+* [设置变量](../2.system-management/2.configuration-management/3.set-variables.md)
