--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/12.delete-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/12.delete-tenant.md
@@ -10,7 +10,7 @@ OceanBase 数据库支持通过 `DROP TENANT` 语句删除租户。
 
 ## 操作步骤
 
-1. 使用 root 用户登录到集群的 sys 租户。
+1. 使用 `root` 用户登录到集群的 `sys` 租户。
 
     ```shell
     obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
@@ -36,7 +36,7 @@ OceanBase 数据库支持通过 `DROP TENANT` 语句删除租户。
     1 row in set
     ```
 
-    `DBA_OB_TENANTS` 视图的详细说明，参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/193.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
+    `DBA_OB_TENANTS` 视图的详细说明，参见 [DBA_OB_TENANTS](../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/193.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
 
 4. （可选）为防止恶意或误操作导致的数据不可恢复性丢失，OceanBase 数据库提供了租户级的回收站功能，从而支持租户级的数据的快速恢复功能。回收站默认开启，在系统租户下使用 `SHOW RECYCLEBIN` 语句，可以查看当前系统租户 RECYCLEBIN 中的回收站对象。示例如下：
 
