--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant/2.create-an-empty-standby-tenant.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant/2.create-an-empty-standby-tenant.md
@@ -26,7 +26,7 @@
 
 * `DBA_OB_TENANTS`：获取主租户的兼容模式。
 
-  关于 `DBA_OB_TENANTS` 视图的更多介绍，请参见 [DBA_OB_TENANTS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/193.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
+  关于 `DBA_OB_TENANTS` 视图的更多介绍，请参见 [DBA_OB_TENANTS](../../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/193.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
   
 * `DBA_OB_LS`: 获取主租户的日志流列表以及日志流状态。
 
