--- a/zh-CN/7.reference/2.system-management/8.management-process/3.view-the-status-of-threads.md
+++ b/zh-CN/7.reference/2.system-management/8.management-process/3.view-the-status-of-threads.md
@@ -41,7 +41,7 @@
    * Oracle 模式
 
      ```sql
-     SELECT * FROM GV$OB_THREAD;
+     SELECT * FROM SYS.GV$OB_THREAD;
      ```
 
      查询的部分结果的示例如下。
@@ -70,8 +70,8 @@
    | LATCH_HOLD  | 当前线程持有的 Latch 的地址，可能包含多个                     |
    | TRACE_ID    | 当前线程上正在执行的 Trace 的 id                                   |
 
-   有关视图 `GV$OB_THREAD` 中字段的详细说明，请参见 [GV$OB_THREAD](待补充)。
+   有关视图 `GV$OB_THREAD` 中字段的详细说明，请参见 [GV$OB_THREAD](../../7.system-views/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/128.gv_ob_thread-of-mysql-mode.md)。
 
 ## 更多信息
 
-关于 OceanBase 数据库线程的更多详情，请参见 [线程简介](../../../1.oceanbase-database-concepts/12.observer-node-architecture/3.observer-thread-model/1.thread-introduction.md)。
+关于 OceanBase 数据库线程的更多详情，请参见 [线程简介](../../1.oceanbase-database-concepts/12.observer-node-architecture/3.observer-thread-model/1.thread-introduction.md)。
