--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
@@ -37,7 +37,7 @@
      ALTER SYSTEM SET log_archive_concurrency = 10;
      ```
 
-   有关配置项 `log_archive_concurrency` 的更多信息，请参见 [log_archive_concurrency](../../../7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/250.log_archive_concurrency.md)。
+   有关配置项 `log_archive_concurrency` 的更多信息，请参见 [log_archive_concurrency](../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/4.tenant-level-configuration-items/250.log_archive_concurrency.md)。
 
 ## 配置归档目的端
 
