--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/5.view-log-archive-piece.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/5.view-log-archive-piece.md
@@ -8,7 +8,7 @@
 
 ## 系统租户查看所有租户的所有 Piece 信息
 
-`sys` 租户可以通过 `oceanbase.CDB_OB_ARCHIVELOG_PIECE_FILES` 视图查看当前集群中所有租户的所有 Piece 信息。
+`sys` 租户可以通过 `CDB_OB_ARCHIVELOG_PIECE_FILES` 视图查看当前集群中所有租户的所有 Piece 信息。
 
 1. 使用 `root` 用户登录集群的 `sys` 租户。
 
@@ -276,4 +276,4 @@
    4 rows in set
    ```
 
-更多 `CDB_OB_ARCHIVELOG_PIECE_FILES` 视图的说明，请参见 [CDB_OB_ARCHIVELOG_PIECE_FILES](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/86.oceanbase-cdb_ob_archivelog_piece_files-of-mysql-mode.md)。
+更多 `CDB_OB_ARCHIVELOG_PIECE_FILES` 视图的说明，请参见 [CDB_OB_ARCHIVELOG_PIECE_FILES](../../../7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/86.oceanbase-cdb_ob_archivelog_piece_files-of-mysql-mode.md)。
