--- a/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
@@ -98,7 +98,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
      obclient> ALTER USER user_name PROFILE {"profile_name" | default};
      ```
 
-     更多 `ALTER USER` 语句的详细信息，参见 [ALTER USER](../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/12.alter-user-of-oracle-mode.md) 。
+     更多 `ALTER USER` 语句的详细信息，参见 [ALTER USER](../../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/12.alter-user-of-oracle-mode.md) 。
 
 ## 操作示例
 
