--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/1.create-a-user-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/1.create-a-user-of-oracle-mode.md
@@ -61,7 +61,7 @@ tls_option:
 
 * `PRIMARY_ZONE`：用于指定用户的 Primary Zone。
 
-  更多 Primary Zone 相关的介绍信息请参见 [Primary Zone](../../../../../1.oceanbase-database-concepts/5.distributed-database-objects/2.cluster-architecture.md)。
+  更多 Primary Zone 相关的介绍信息请参见 [Primary Zone](../../../../../7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/2.cluster-architecture.md)。
   
 创建一个拥有最小数据库权限即连接数据库权限的用户 `test2` 的示例如下。
 
@@ -73,7 +73,7 @@ tls_option:
    obclient> CREATE USER test2 IDENTIFIED BY ******;
    ```
 
-   `CREATE USER` 语句的更多信息，请参见 [CREATE USER](../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/27.create-user-of-oracle-mode.md)。
+   `CREATE USER` 语句的更多信息，请参见 [CREATE USER](../../../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/27.create-user-of-oracle-mode.md)。
 
 3. 执行以下命令，授予用户 `test2` 连接数据库的权限。
 
@@ -81,4 +81,4 @@ tls_option:
    obclient>GRANT CREATE SESSION TO test2;
    ```
 
-   `GRANT` 语句的更多信息，请参见 [GRANT](../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/17.grant-of-oracle-mode.md)。
+   `GRANT` 语句的更多信息，请参见 [GRANT](../../../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/17.grant-of-oracle-mode.md)。
