--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/4.manage-roles-of-oracle-mode/6.view-roles-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/4.manage-roles-of-oracle-mode/6.view-roles-of-oracle-mode.md
@@ -24,7 +24,7 @@
   5 rows in set
   ```
 
-  更多 `DBA_ROLES` 视图的字段及说明请参见 [DBA_ROLES](../../../../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/91.dba_roles-of-oracle-mode.md)。
+  更多 `DBA_ROLES` 视图的字段及说明请参见 [DBA_ROLES](../../../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/91.dba_roles-of-oracle-mode.md)。
   
 * 查看角色中包含的角色
 
@@ -40,7 +40,7 @@
   1 row in set
   ```
 
-  更多 `ROLE_ROLE_PRIVS` 视图的字段及说明请参见 [ROLE_ROLE_PRIVS](../../../../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/199.role_role_privs-of-oracle-mode.md)。
+  更多 `ROLE_ROLE_PRIVS` 视图的字段及说明请参见 [ROLE_ROLE_PRIVS](../../../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/199.role_role_privs-of-oracle-mode.md)。
   
 * 查看角色所拥有的系统权限。
 
@@ -56,7 +56,7 @@
   1 row in set
   ```
 
-  更多 `ROLE_SYS_PRIVS` 视图的字段及说明请参见 [ROLE_SYS_PRIVS](../../../../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/198.role_sys_privs-of-oracle-mode.md)。
+  更多 `ROLE_SYS_PRIVS` 视图的字段及说明请参见 [ROLE_SYS_PRIVS](../../../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/198.role_sys_privs-of-oracle-mode.md)。
   
 * 查看角色所拥有的对象权限。
 
@@ -72,5 +72,5 @@
   1 row in set
   ```
 
-  更多 `ROLE_TAB_PRIVS` 视图的字段及说明请参见 [ROLE_TAB_PRIVS](../../../../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/197.role_tab_privs-of-oracle-mode.md)。
+  更多 `ROLE_TAB_PRIVS` 视图的字段及说明请参见 [ROLE_TAB_PRIVS](../../../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/197.role_tab_privs-of-oracle-mode.md)。
   
