--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/4.manage-roles-of-oracle-mode/8.revoke-role-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/4.manage-roles-of-oracle-mode/8.revoke-role-of-oracle-mode.md
@@ -40,4 +40,4 @@
 obclient>  REVOKE role1 FROM test;
 ```
 
-更多 `REVOKE` 语句的说明信息，请参见 [REVOKE](../../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/29.revoke-of-oracle-mode.md)。
+更多 `REVOKE` 语句的说明信息，请参见 [REVOKE](../../../../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/29.revoke-of-oracle-mode.md)。
