--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/9.delete-a-user-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/9.delete-a-user-of-oracle-mode.md
@@ -40,4 +40,4 @@
 
 ## 相关文档
 
-更多 `DROP USER` 语句的信息请参见 [DROP USER](../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/42.drop-user-of-oracle-mode.md)。
+更多 `DROP USER` 语句的信息请参见 [DROP USER](../../../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/42.drop-user-of-oracle-mode.md)。
