--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/1.user-and-permission-overview.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/1.user-and-permission-overview.md
@@ -73,7 +73,7 @@ MySQL 模式没有角色，权限模型相对简单。权限检查逻辑和 Orac
     <p>目前仅 OceanBase 数据库的 Oracle 租户支持角色管理。</p>
 </main>
 
-关于角色管理的相关操作，参见 [角色管理](../2.user-and-permission/3.permission-of-oracle-mode/4.roles-of-oracle-mode.md)
+关于角色管理的相关操作，参见 [角色管理](3.permission-of-oracle-mode/4.manage-roles-of-oracle-mode/1.roles-of-oracle-mode.md)。
 
 ### 间接权限
 
