--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/2.authority-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/2.authority-of-oracle-mode.md
@@ -13,7 +13,7 @@
 
 * 当授予系统权限或角色时，当前用户必须拥有被授予的权限或角色，并且拥有 `GRANT OPTION` 权限，或者拥有 `GRANT ANY PRIVILEGE` 权限或 `GRANT ANY ROLE` 权限，才能授予成功。
 
-查看当前拥有权限的操作请参见 [查看用户权限](6.view-user-permissions-of-oracle-mode.md)。如果您没有所需的权限，请联系管理员为您添加。查看当前拥有角色的操作请参见 [查看角色](../../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/9.manage-roles-of-oracle-mode/6.view-roles-of-oracle-mode.md)。
+查看当前拥有权限的操作请参见 [查看用户权限](6.view-user-permissions-of-oracle-mode.md)。如果您没有所需的权限，请联系管理员为您添加。查看当前拥有角色的操作请参见 [查看角色](4.manage-roles-of-oracle-mode/6.view-roles-of-oracle-mode.md)。
 
 ### 注意事项
 
@@ -41,4 +41,4 @@
   obclient> GRANT SELECT, UPDATE ON emp_view TO test;
   ```
 
-关于 `GRANT` 语句的更多信息，参见 [GRANT](../../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/17.grant-of-oracle-mode.md)。
+关于 `GRANT` 语句的更多信息，参见 [GRANT](../../../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/17.grant-of-oracle-mode.md)。
