--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/4.manage-roles-of-oracle-mode/7.modify-a-role-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/4.manage-roles-of-oracle-mode/7.modify-a-role-of-oracle-mode.md
@@ -149,6 +149,6 @@ Query OK, 0 rows affected
 obclient> GRANT [privilege_list] TO PUBLIC;
 ```
 
-添加权限后，系统会将该权限添加到租户内的每个用户的权限域中。所有用户都可以立即执行该权限所授权的操作。关于 `PUBLIC` 角色的更多信息，请参见 [角色管理概述](../9.manage-roles-of-oracle-mode/1.role-management-overview-of-oracle-mode.md)。
+添加权限后，系统会将该权限添加到租户内的每个用户的权限域中。所有用户都可以立即执行该权限所授权的操作。关于 `PUBLIC` 角色的更多信息，请参见 [角色管理概述](../4.manage-roles-of-oracle-mode/1.role-management-overview-of-oracle-mode.md)。
 
-更多 `GRANT` 语句的说明信息，请参见 [GRANT](../../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/17.grant-of-oracle-mode.md)。
+更多 `GRANT` 语句的说明信息，请参见 [GRANT](../../../../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/17.grant-of-oracle-mode.md)。
