--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/6.view-user-permissions-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/6.view-user-permissions-of-oracle-mode.md
@@ -22,7 +22,7 @@
      1 row in set
      ```
 
-     更多 `DBA_SYS_PRIVS` 视图的字段及说明请参见 [DBA_SYS_PRIVS](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/104.dba_sys_privs-of-oracle-mode.md)。
+     更多 `DBA_SYS_PRIVS` 视图的字段及说明请参见 [DBA_SYS_PRIVS](../../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/104.dba_sys_privs-of-oracle-mode.md)。
 
    * 查看当前用户被授予的系统权限
 
@@ -39,7 +39,7 @@
      2 row in set
      ```
 
-     更多 `USER_SYS_PRIVS` 视图的字段及说明请参见 [USER_SYS_PRIVS](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/172.user_sys_privs-of-oracle-mode.md)。
+     更多 `USER_SYS_PRIVS` 视图的字段及说明请参见 [USER_SYS_PRIVS](../../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/172.user_sys_privs-of-oracle-mode.md)。
 
    * 查看某个用户被授予的对象权限
 
@@ -56,7 +56,7 @@
      2 rows in set
      ```
 
-     更多 `DBA_TAB_PRIVS` 视图的字段及说明请参见 [DBA_TAB_PRIVS](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/111.dba_tab_privs-of-oracle-mode.md)。
+     更多 `DBA_TAB_PRIVS` 视图的字段及说明请参见 [DBA_TAB_PRIVS](../../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/111.dba_tab_privs-of-oracle-mode.md)。
 
    * 查看当前用户被授予的对象权限
 
@@ -72,7 +72,7 @@
      1 row in set
      ```
 
-     更多 `USER_TAB_PRIVS` 视图的字段及说明请参见 [USER_TAB_PRIVS](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/182.user_tab_privs-of-oracle-mode.md)。
+     更多 `USER_TAB_PRIVS` 视图的字段及说明请参见 [USER_TAB_PRIVS](../../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/182.user_tab_privs-of-oracle-mode.m)。
 
    * 查看某个用户所拥有的角色。
 
@@ -88,9 +88,9 @@
      1 row in set
      ```
 
-     更多 `DBA_ROLE_PRIVS` 视图的字段及说明请参见 [DBA_ROLE_PRIVS](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/92.dba_role_privs-of-oracle-mode.md)。
+     更多 `DBA_ROLE_PRIVS` 视图的字段及说明请参见 [DBA_ROLE_PRIVS](../../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/92.dba_role_privs-of-oracle-mode.md)。
 
-     如果需要查看各角色所拥有的对象权限或系统权限，可以参见 [查看角色](../../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/9.manage-roles-of-oracle-mode/6.view-roles-of-oracle-mode.md)。
+     如果需要查看各角色所拥有的对象权限或系统权限，可以参见 [查看角色](4.manage-roles-of-oracle-mode/6.view-roles-of-oracle-mode.md)。
 
    * 查看当前用户被授予的角色
 
@@ -106,6 +106,6 @@
      1 row in set
      ```
 
-     更多 `USER_ROLE_PRIVS` 视图的字段及说明请参见 [USER_ROLE_PRIVS](../../../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/165.user_role_privs-of-oracle-mode.md)。
+     更多 `USER_ROLE_PRIVS` 视图的字段及说明请参见 [USER_ROLE_PRIVS](../../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/165.user_role_privs-of-oracle-mode.md)。
 
-     如果需要查看当前角色所拥有的对象权限或系统权限，可以参见 [查看角色](../../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/9.manage-roles-of-oracle-mode/6.view-roles-of-oracle-mode.md)。
+     如果需要查看当前角色所拥有的对象权限或系统权限，可以参见 [查看角色](4.manage-roles-of-oracle-mode/6.view-roles-of-oracle-mode.md)。
