--- a/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/10.manage-external-tables-of-oracle-mode/2.create-a-external-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/10.manage-external-tables-of-oracle-mode/2.create-a-external-table-of-oracle-mode.md
@@ -4,7 +4,7 @@
 
 ## 权限要求
 
-创建外表需要当前用户拥有 `CREATE TABLE` 权限，查看当前用户权限的操作请参见 [查看用户权限](../../../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/6.view-user-permissions-of-oracle-mode.md)。如果您没有 `CREATE TABLE` 权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](../../../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/7.modify-user-permissions-of-oracle-mode.md)。
+创建外表需要当前用户拥有 `CREATE TABLE` 权限，查看当前用户权限的操作请参见 [查看用户权限](../../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/6.view-user-permissions-of-oracle-mode.md)。如果您没有 `CREATE TABLE` 权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](../../../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/7.modify-user-permissions-of-oracle-mode.md)。
 
 ## 创建外表
 
@@ -36,7 +36,7 @@ FORMAT = (
 
 * `col_name col_type [AS (metadata$filecol{N})]`：用于定义列。其中，`AS (metadata$filecol{N})` 用于手动定义列映射。
 
-  外表支持的列类型与普通表一致，OceanBase 数据库 Oracle 模式中支持的数据类型及详细介绍请参见 [数据类型概述](../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/1.overview-of-built-in-data-types-of-oracle-mode.md)。
+  外表支持的列类型与普通表一致，OceanBase 数据库 Oracle 模式中支持的数据类型及详细介绍请参见 [数据类型概述](../../../../5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/1.overview-of-built-in-data-types-of-oracle-mode.md)。
 
   默认情况下，外部文件中的数据列与外表定义的列是自动按顺序对应的，即外表的第一列对应外部文件中第一列的数据。
   
@@ -103,7 +103,7 @@ FORMAT = (
   * `FIELD_DELIMITER`：指定文件的列分隔符。如果不指定，默认值为 `FIELD_DELIMITER='\t'`。
   * `ESCAPE`：指定文件的转义字符。例如，`ESCAPE ='*'` 表示将星号（*）指定为转义字符来取代默认的转义字符（\）。如果不指定，默认值为 `ESCAPE ='\'`。
   * `FIELD_OPTIONALLY_ENCLOSED_BY`：指定文件中包裹字段值的符号。例如，`ESCAPE = '"'` 表示将值放在双引号之间。如果不指定，默认值为空。
-  * `ENCODING`：指定文件的字符集编码格式，当前 Oracle 模式支持的所有字符集请参见 [字符集](../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/2.data-type-comparison-rules-of-oracle-mode/1.overview-of-data-type-comparison-rules-of-oracle-mode.md)。如果不指定，默认值为 UTF8MB4。
+  * `ENCODING`：指定文件的字符集编码格式，当前 Oracle 模式支持的所有字符集请参见 [字符集](../../../../5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/2.data-type-comparison-rules-of-oracle-mode/1.overview-of-data-type-comparison-rules-of-oracle-mode.md)。如果不指定，默认值为 UTF8MB4。
   * `NULL_IF`：指定哪些字符串被当作 `NULL` 处理。如果不指定，默认值为空。
   * `SKIP_HEADER`：指定跳过文件头，需要跳过的行数。如果不指定，默认不跳过文件头。
   * `SKIP_BLANK_LINES`：指定是否跳过空白行。如果不指定，默认值为 `FALSE`。
@@ -139,7 +139,7 @@ FORMAT = (
    obclient -h10.xx.xx.xx -P2881 -uroot@sys -p***** -A
    ```
    
-   通过直连方式连接数据库的详细操作，请参见 [通过 OBClient 连接 OceanBase 租户](../../../../../../3.develop/1.connect-to-oceanbase-database/2.connect-to-oceanbase-database-of-oracle-mode/2.connect-to-an-oceanbase-tenant-by-using-obclient-of-oracle-mode.md)。
+   通过直连方式连接数据库的详细操作，请参见 [通过 OBClient 连接 OceanBase 租户](../../../../../3.develop/1.connect-to-oceanbase-database/2.connect-to-oceanbase-database-of-oracle-mode/2.connect-to-an-oceanbase-tenant-by-using-obclient-of-oracle-mode.md)。
 
 2. 配置数据库可以访问的路径 `/home/admin/`。
 
